--- a/editextlibrary/src/main/res/layout/layout_custom_editext.xml
+++ b/editextlibrary/src/main/res/layout/layout_custom_editext.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_all"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#A9A9A9"
+    android:background="#F6F6F6"
     android:orientation="vertical">
 
     <EditText
         android:id="@+id/edt_content"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="200dp"
         android:background="@null"
         android:gravity="left|top"
         android:hint="请你输入想要输入的各种"
-        android:padding="10dp"
-        android:textColorHint="#333333"
+        android:lineSpacingExtra="2dp"
+        android:textColor="#666666"
+        android:textColorHint="#B7B7B7"
         android:textCursorDrawable="@drawable/base_cursor_color"
-        android:textSize="14sp" />
+        android:textSize="13sp" />
 
     <LinearLayout
         android:id="@+id/layout_txt_num"
@@ -30,8 +32,7 @@
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:text="0/1000"
-
-            android:textSize="12sp" />
+            android:textSize="11sp" />
     </LinearLayout>
 
     <View
@@ -39,6 +40,6 @@
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:layout_marginTop="5dp"
-        android:background="@color/colorPrimary" />
+        android:background="@color/color_666666" />
 
 </LinearLayout>
