--- a/editextlibrary/src/main/res/values/attrs.xml
+++ b/editextlibrary/src/main/res/values/attrs.xml
@@ -3,17 +3,18 @@
     <declare-styleable name="FeedBackEditext">
         <attr name="bgColor" format="color" />
         <attr name="edtHint" format="string" />
+        <attr name="edtHintColor" format="color" />
         <attr name="edtColor" format="color" />
         <attr name="edtSize" format="integer" />
         <attr name="edtLineSpacing" format="integer" />
-        <attr name="edtPadding" format="integer" />
+        <attr name="cursorDrawable" format="reference" />
+        <attr name="llPadding" format="dimension" />
         <attr name="textColor" format="color" />
         <attr name="textSize" format="integer" />
         <attr name="lineHight" format="integer" />
         <attr name="lineColor" format="color" />
         <attr name="textMax" format="integer" />
         <attr name="textMarginTop" format="dimension" />
-        <attr name="textIsDisplayable" format="boolean" />
         <attr name="textGravity" format="enum">
             <enum name="left" value="1" />
             <enum name="center" value="2" />
