--- a/editextlibrary/src/main/res/values/colors.xml
+++ b/editextlibrary/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="color_666666">#666666</color>
+    <color name="color_F6F6F6">#F6F6F6</color>
     <color name="color_white">#FFFFFF</color>
 </resources>
