--- a/editextlibrary/src/main/res/layout/layout_custom_editext.xml
+++ b/editextlibrary/src/main/res/layout/layout_custom_editext.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F6F6F6"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="15dp">
 
     <EditText
         android:id="@+id/edt_content"
@@ -23,6 +24,7 @@
         android:id="@+id/layout_txt_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="right"
         android:orientation="horizontal">
 
         <TextView
