--- a/editextlibrary/src/main/res/values/attrs.xml
+++ b/editextlibrary/src/main/res/values/attrs.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="FeedBackEditext">
-        <attr name="bgColor" format="color" />
-        <attr name="edtHint" format="string" />
-        <attr name="edtHintColor" format="color" />
-        <attr name="edtColor" format="color" />
-        <attr name="edtSize" format="integer" />
-        <attr name="edtLineSpacing" format="integer" />
-        <attr name="cursorDrawable" format="reference" />
-        <attr name="llPadding" format="dimension" />
-        <attr name="textColor" format="color" />
-        <attr name="textSize" format="integer" />
-        <attr name="lineHight" format="integer" />
-        <attr name="lineColor" format="color" />
-        <attr name="textMax" format="integer" />
-        <attr name="textMarginTop" format="dimension" />
-        <attr name="textGravity" format="enum">
+        <attr name="bg_color" format="color" />
+        <attr name="ll_padding" format="dimension" />
+        <attr name="edt_hint" format="string" />
+        <attr name="edt_hint_color" format="color" />
+        <attr name="edt_color" format="color" />
+        <attr name="edt_size" format="integer" />
+        <attr name="edt_height" format="dimension" />
+        <attr name="edt_line_spacing" format="integer" />
+        <attr name="edt_cursor_drawable" format="reference" />
+        <attr name="text_size" format="integer" />
+        <attr name="text_color" format="color" />
+        <attr name="text_max" format="integer" />
+        <attr name="text_margin_top" format="dimension" />
+        <attr name="text_gravity" format="enum">
             <enum name="left" value="1" />
             <enum name="center" value="2" />
             <enum name="right" value="3" />
         </attr>
+        <attr name="line_color" format="color" />
+        <attr name="line_hight" format="integer" />
     </declare-styleable>
 
 </resources>
