--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,20 +10,20 @@
         android:id="@+id/editext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:bg_color="#F6F6F6"
-        app:edt_color="@color/color_666666"
-        app:edt_cursor_drawable="@drawable/base_cursor_color"
-        app:edt_height="150dp"
-        app:edt_hint="为了更好的为您提供服务，欢迎您提出宝贵的意见和 建议，感谢！"
-        app:edt_hint_color="#B7B7B7 "
-        app:edt_line_spacing="2"
-        app:edt_size="13"
-        app:ll_padding="15dp"
-        app:text_color="@color/color_666666"
-        app:text_gravity="right"
-        app:text_margin_top="10dp"
-        app:text_max="1000"
-        app:text_size="11">
+        app:feedback_bg_color="#F6F6F6"
+        app:feedback_edt_color="@color/color_666666"
+        app:feedback_edt_cursor_drawable="@drawable/base_cursor_color"
+        app:feedback_edt_height="150dp"
+        app:feedback_edt_hint="为了更好的为您提供服务，欢迎您提出宝贵的意见和建议，感谢！"
+        app:feedback_edt_hint_color="#B7B7B7 "
+        app:feedback_edt_line_spacing="2"
+        app:feedback_edt_size="13"
+        app:feedback_ll_padding="15dp"
+        app:feedback_text_color="@color/color_666666"
+        app:feedback_text_gravity="right"
+        app:feedback_text_margin_top="10dp"
+        app:feedback_text_max="1000"
+        app:feedback_text_size="11">
 
     </com.diaoyonglong.editext.FeedBackEditext>
 
