--- a/editextlibrary/src/main/res/values/attrs.xml
+++ b/editextlibrary/src/main/res/values/attrs.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="FeedBackEditext">
-        <attr name="bg_color" format="color" />
-        <attr name="ll_padding" format="dimension" />
-        <attr name="edt_hint" format="string" />
-        <attr name="edt_hint_color" format="color" />
-        <attr name="edt_color" format="color" />
-        <attr name="edt_size" format="integer" />
-        <attr name="edt_height" format="dimension" />
-        <attr name="edt_line_spacing" format="integer" />
-        <attr name="edt_cursor_drawable" format="reference" />
-        <attr name="text_size" format="integer" />
-        <attr name="text_color" format="color" />
-        <attr name="text_max" format="integer" />
-        <attr name="text_margin_top" format="dimension" />
-        <attr name="text_gravity" format="enum">
+        <attr name="feedback_bg_color" format="color" />
+        <attr name="feedback_ll_padding" format="dimension" />
+        <attr name="feedback_edt_hint" format="string" />
+        <attr name="feedback_edt_hint_color" format="color" />
+        <attr name="feedback_edt_color" format="color" />
+        <attr name="feedback_edt_size" format="integer" />
+        <attr name="feedback_edt_height" format="dimension" />
+        <attr name="feedback_edt_line_spacing" format="integer" />
+        <attr name="feedback_edt_cursor_drawable" format="reference" />
+        <attr name="feedback_text_size" format="integer" />
+        <attr name="feedback_text_color" format="color" />
+        <attr name="feedback_text_max" format="integer" />
+        <attr name="feedback_text_margin_top" format="dimension" />
+        <attr name="feedback_text_gravity" format="enum">
             <enum name="left" value="1" />
             <enum name="center" value="2" />
             <enum name="right" value="3" />
         </attr>
-        <attr name="line_color" format="color" />
-        <attr name="line_hight" format="integer" />
+        <attr name="feedback_line_color" format="color" />
+        <attr name="feedback_line_hight" format="integer" />
     </declare-styleable>
 
 </resources>
