--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical"
     android:padding="15dp">
 
@@ -10,7 +11,7 @@
         android:id="@+id/editext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:feedback_bg_color="#F6F6F6"
+        app:feedback_bg_color="@drawable/layout_bg_shape"
         app:feedback_edt_color="@color/color_666666"
         app:feedback_edt_cursor_drawable="@drawable/base_cursor_color"
         app:feedback_edt_height="150dp"
