--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,32 +7,104 @@
     android:orientation="vertical"
     android:padding="15dp">
 
-    <com.diaoyonglong.editext.FeedBackEditext
-        android:id="@+id/editext"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:feedback_bg_color="@drawable/layout_bg_shape"
-        app:feedback_edt_color="@color/color_666666"
-        app:feedback_edt_cursor_drawable="@drawable/base_cursor_color"
-        app:feedback_edt_height="150dp"
-        app:feedback_edt_hint="为了更好的为您提供服务，欢迎您提出宝贵的意见和建议，感谢！"
-        app:feedback_edt_hint_color="#B7B7B7 "
-        app:feedback_edt_line_spacing="2"
-        app:feedback_edt_size="13"
-        app:feedback_ll_padding="15dp"
-        app:feedback_text_color="@color/color_666666"
-        app:feedback_text_gravity="right"
-        app:feedback_text_margin_top="10dp"
-        app:feedback_text_max="1000"
-        app:feedback_text_size="11">
+        android:layout_height="match_parent"
+        android:background="#FFFFFF"
+        android:orientation="vertical"
+        android:padding="15dp">
 
-    </com.diaoyonglong.editext.FeedBackEditext>
+        <com.diaoyonglong.editext.FeedBackEditext
+            android:id="@+id/editext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:feedback_bg_color="@drawable/layout_bg_shape"
+            app:feedback_edt_color="@color/color_666666"
+            app:feedback_edt_cursor_drawable="@drawable/base_cursor_color"
+            app:feedback_edt_height="150dp"
+            app:feedback_edt_hint="为了更好的为您提供服务，欢迎您提出宝贵的意见和建议，感谢！"
+            app:feedback_edt_hint_color="#B7B7B7 "
+            app:feedback_edt_line_spacing="2"
+            app:feedback_edt_size="13"
+            app:feedback_ll_padding="15dp"
+            app:feedback_text_color="@color/color_666666"
+            app:feedback_text_gravity="right"
+            app:feedback_text_margin_top="10dp"
+            app:feedback_text_max="1000"
+            app:feedback_text_size="11">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="获取文字" />
+        </com.diaoyonglong.editext.FeedBackEditext>
 
-</LinearLayout>
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="获取文字" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#FFFFFF"
+            android:orientation="vertical"
+            android:padding="15dp">
+
+            <com.diaoyonglong.editext.FeedBackEditext
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:feedback_bg_color="@drawable/layout_bg_shape"
+                app:feedback_edt_color="@color/color_666666"
+                app:feedback_edt_cursor_drawable="@drawable/base_cursor_color"
+                app:feedback_edt_height="150dp"
+                app:feedback_edt_hint="为了更好的为您提供服务，欢迎您提出宝贵的意见和建议，感谢！"
+                app:feedback_edt_hint_color="#B7B7B7 "
+                app:feedback_edt_line_spacing="2"
+                app:feedback_edt_size="13"
+                app:feedback_ll_padding="15dp"
+                app:feedback_text_color="@color/color_666666"
+                app:feedback_text_gravity="right"
+                app:feedback_text_margin_top="10dp"
+                app:feedback_text_max="1000"
+                app:feedback_text_size="11">
+
+            </com.diaoyonglong.editext.FeedBackEditext>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="获取文字" />
+
+            <com.diaoyonglong.editext.FeedBackEditext
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:feedback_bg_color="@drawable/layout_bg_shape"
+                app:feedback_edt_color="@color/color_666666"
+                app:feedback_edt_cursor_drawable="@drawable/base_cursor_color"
+                app:feedback_edt_height="150dp"
+                app:feedback_edt_hint="为了更好的为您提供服务，欢迎您提出宝贵的意见和建议，感谢！"
+                app:feedback_edt_hint_color="#B7B7B7 "
+                app:feedback_edt_line_spacing="2"
+                app:feedback_edt_size="13"
+                app:feedback_ll_padding="15dp"
+                app:feedback_text_color="@color/color_666666"
+                app:feedback_text_gravity="right"
+                app:feedback_text_margin_top="10dp"
+                app:feedback_text_max="1000"
+                app:feedback_text_size="11">
+
+            </com.diaoyonglong.editext.FeedBackEditext>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="获取文字" />
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+
+</android.support.v4.widget.NestedScrollView>
